--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             A 2021 CS grad from SRM IST, working as an Associate 1 at <img class="KPMG" src="KPMG.jpg" height= "30vh"> GDC.
           </h3>
           <p class="p-margin">
-           Started off as an Front-end Intern for <b>Foxmula</b>, with great enthusiasm for Full stack & DevOps. A year and a half later, I'm certified in wide-range of technologies, ranging from RPA (<b>UiRPA</b>), BPM (<b>Appian</b>) & CSP (<b>Azure</b>).
+           Started off as an Front-end Intern for <b>Foxmula</b>, with great enthusiasm for Full stack & DevOps. A year and a half later, I'm certified in wide-range of technologies, ranging from RPA (<b>UiRPA</b>), BPM (<b>Appian</b>) to CSP (<b>Azure</b>).
           </p>
         </div>
       </div>
