--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
     </div>
     <div class="contact">
       <h5 class="follow">FOLLOW :</h5>
-      <a class="font-margin" href="https://www.instagram.com/aaryan_manutd/" target="blank"><i class="fa fa-instagram fa-2x fonts"
-          aria-hidden="true"></i></a>
+<!--       <a class="font-margin" href="https://www.instagram.com/aaryan_manutd/" target="blank"><i class="fa fa-instagram fa-2x fonts"
+          aria-hidden="true"></i></a> -->
       <a class="font-margin" href="https://www.linkedin.com/in/aaryan-7a883a185/" target="blank"><i
           class="fa fa-linkedin-square fa-2x fonts" aria-hidden="true"></i></a>
-      <a class="font-margin" href="https://twitter.com/Aaryan_ManUtd" target="blank"><i class="fa fa-twitter fa-2x fonts"
-          aria-hidden="true"></i></a>
+<!--       <a class="font-margin" href="https://twitter.com/Aaryan_ManUtd" target="blank"><i class="fa fa-twitter fa-2x fonts"
+          aria-hidden="true"></i></a> -->
     </div>
   </div>
 </body>
